2.6.57 (2025-09-22)

- Changed: The web search icon has been moved to the input area.
- Improved: The local web search plugin has been enhanced to retrieve multiple URLs at once.

2.6.56 (2025-09-22)

- Optimized: Memory usage and performance in streaming and rendering large contexts.
- Added: Copy to clipboard functionality in user messages.
- Added: Manual scroll in plain-text mode.

2.6.55 (2025-09-18)

- Fixed: Unnecessary context loading from the database.
- Optimized: Token count in the input field.

2.6.54 (2025-09-18)

- Added: Remote tools (like web search) are now also available in the Chat with Files and Agents (LlamaIndex) modes.
- Added: Two new plugins: Wolfram Alpha and OpenStreetMap.
- Fixed: Enabled local file-like schemes in links/images in the markdown-it parser.

2.6.53 (2025-09-17)

- Added: An icon to enable/disable the web search remote tool in the icon bar, along with remote web search functionality in OpenRouter (#135).
- Added: The ability to mute audio in real-time mode via the audio icon.

2.6.52 (2025-09-17)

- Added MCP plugin: Provides access to remote tools via the Model Context Protocol (MCP), including stdio, SSE, and Streamable HTTP transports, with per-server allow/deny filtering, Authorization header support, and a tools cache.
- Fixed: tab tooltips reload on profile switch.

2.6.51 (2025-09-16)

- Fix: Automatically reloading calendar notes.
- Fix: Context menu CSS background color for calendar items.

2.6.50 (2025-09-16)

- Optimized: Improved memory cleanup when switching profiles and unloading tabs.
- Fix: Resolved missing PID data in text output.
- Fix: Enhanced real-time parsing of execute tags.

2.6.49 (2025-09-16)

- Fixed: Occasional crashes when focusing on an output container unloaded from memory in the second column.

2.6.48 (2025-09-15)

- Added: auto-loading of next items to the list of contexts when scrolling to the end of the list.

2.6.47 (2025-09-15)

- Improved: Parsing of custom markup tags.