@@ -579,6 +579,20 @@
         "step": 1,
         "advanced": false
     },     
+    "api_proxy.enabled": {
+        "section": "general",
+        "type": "bool",
+        "slider": false,
+        "label": "settings.api_proxy.enabled",
+        "description": "settings.api_proxy.enabled.desc",
+        "value": true,
+        "min": null,
+        "max": null,
+        "multiplier": null,
+        "step": null,
+        "secret": false,
+        "advanced": false
+    },
     "api_proxy": {
         "section": "general",
         "type": "text",
