@@ -1106,8 +1106,10 @@ settings.api_key.perplexity = Perplexity API-SCHLÜSSEL
 settings.api_key.perplexity.desc = Erforderlich für die Perplexity API.
 settings.api_key.xai = xAI API-SCHLÜSSEL
 settings.api_key.xai.desc = Erforderlich für die xAI API und Grok-Modelle.
-settings.api_proxy = Proxy-Adresse
+settings.api_proxy = Proxy verwenden
+settings.api_proxy.enabled = Proxy-Adresse
 settings.api_proxy.desc = Optional, Proxy für API SDK, z.B. http://proxy.example.com oder socks5://user:pass@host:port
+settings.api_proxy.enabled.desc = Aktivieren Sie diese Option, um einen Proxy für Verbindungen zu APIs zu verwenden
 settings.api_use_responses = Verwenden Sie die Responses API im Chat-Modus
 settings.api_use_responses.desc = Verwenden Sie die Responses API anstelle der ChatCompletions API im Chat-Modus
 settings.api_use_responses_llama = Verwenden Sie die Responses API im Chat mit Dateien Modus (LlamaIndex)
