@@ -72,6 +72,10 @@ action.use.read_cmd = Ask for reading this file...
 action.video.open = Open video or audio...
 action.video.play = Play video or audio...
 action.video.transcribe = Transcribe audio...
+agent.builder.confirm.clear.msg = Do you really want to clear the graph?
+agent.builder.confirm.clear.title = Clear
+agent.builder.confirm.delete.msg = Do you really want to delete the agent?
+agent.builder.title = Agent Builder
 agent.coder.additional.label = Additional prompt
 agent.coder.additional.prompt.desc = Additional prompt for agent (will be added to the base prompt)
 agent.coder.base.label = Base prompt
@@ -776,6 +780,7 @@ menu.config.save = Save config
 menu.config.settings = Settings...
 menu.debug = Debug
 menu.debug.agent = Agent...
+menu.debug.agent_builder = Agent Builder
 menu.debug.app.log = View log file (app.log)
 menu.debug.assistants = Assistants...
 menu.debug.attachments = Files / attachments...
@@ -830,6 +835,7 @@ menu.theme.style = Style...
 menu.theme.syntax = Code syntax highlight...
 menu.theme.tooltips = Show tooltips
 menu.tools = Tools
+menu.tools.agent.builder = Agent Builder
 menu.tools.audio.transcribe = Transcribe Audio/Video Files
 menu.tools.html_canvas = HTML/JS Canvas
 menu.tools.image.viewer = Image Viewer
@@ -1143,7 +1149,9 @@ settings.api_native_google.use_vertex.desc = Enable to use VertexAI in Google Ge
 settings.api_native_xai = Use native API SDK
 settings.api_native_xai.desc = Use native xAI SDK instead of compatible OpenAI client
 settings.api_proxy = Proxy address
+settings.api_proxy.enabled = Use proxy
 settings.api_proxy.desc = Optional, proxy for API SDKs, e.g. http://proxy.example.com or socks5://user:pass@host:port
+settings.api_proxy.enabled.desc = Enable this option to use a proxy for connections to APIs
 settings.api_use_responses = Use Responses API in Chat mode
 settings.api_use_responses.desc = Use Responses API instead of ChatCompletions API in Chat mode
 settings.api_use_responses_llama = Use Responses API in Chat with Files mode (LlamaIndex)
@@ -1652,10 +1660,3 @@ vision.capture.manual.captured.success = Image captured from the camera:
 vision.capture.name.prefix = Camera capture:
 vision.capture.options.title = Video capture
 vision.checkbox.tooltip = If checked, the vision model is active. It will be automatically activated upon image upload. You can deactivate it in real-time.
-
-menu.tools.agent.builder = Agent Builder
-agent.builder.title = Agent Builder
-agent.builder.confirm.clear.title = Clear
-agent.builder.confirm.clear.msg = Do you really want to clear the graph?
-agent.builder.confirm.delete.msg = Do you really want to delete the agent?
-menu.debug.agent_builder = Agent Builder
