@@ -1108,7 +1108,9 @@ settings.api_key.perplexity.desc = Requerido para la API Perplexity.
 settings.api_key.xai = CLAVE API xAI
 settings.api_key.xai.desc = Requerido para la API xAI y modelos Grok.
 settings.api_proxy = Dirección proxy
+settings.api_proxy.enabled = Usar proxy
 settings.api_proxy.desc = Opcional, proxy para API SDK, por ej. http://proxy.example.com o socks5://user:pass@host:port
+settings.api_proxy.enabled.desc = Habilita esta opción para usar un proxy para las conexiones a las API
 settings.api_use_responses = Usar API de Respuestas en modo Chat
 settings.api_use_responses.desc = Usar API de Respuestas en lugar de ChatCompletions API en modo Chat
 settings.api_use_responses_llama = Usar Responses API en modo Chat con Archivos (LlamaIndex)
