@@ -1107,7 +1107,9 @@ settings.api_key.perplexity.desc = Requis pour l'API Perplexity.
 settings.api_key.xai = Clé API xAI
 settings.api_key.xai.desc = Requis pour l'API xAI et les modèles Grok.
 settings.api_proxy = Adresse proxy
+settings.api_proxy.enabled = Utiliser un proxy
 settings.api_proxy.desc = Optionnel, proxy pour l'API SDK, par ex. http://proxy.example.com ou socks5://user:pass@host:port
+settings.api_proxy.enabled.desc = Activez cette option pour utiliser un proxy pour les connexions aux API
 settings.api_use_responses = Utiliser l'API Responses en mode chat
 settings.api_use_responses.desc = Utiliser l'API Responses au lieu de l'API ChatCompletions en mode chat
 settings.api_use_responses_llama = Utiliser Responses API en mode Chat avec des Fichiers (LlamaIndex)
