@@ -1107,7 +1107,9 @@ settings.api_key.perplexity.desc = Necessario per l'API Perplexity.
 settings.api_key.xai = Chiave API xAI
 settings.api_key.xai.desc = Necessario per l'API xAI e i modelli Grok.
 settings.api_proxy = Indirizzo proxy
+settings.api_proxy.enabled = Usa proxy
 settings.api_proxy.desc = Opzionale, proxy per l'API SDK, es. http://proxy.example.com o socks5://user:pass@host:port
+settings.api_proxy.enabled.desc = Abilita questa opzione per utilizzare un proxy per le connessioni alle API
 settings.api_use_responses = Utilizzare l'API delle Risposte in modalità chat
 settings.api_use_responses.desc = Utilizzare l'API delle Risposte invece dell'API ChatCompletions in modalità chat
 settings.api_use_responses_llama = Usa il Responses API in modalità Chat con File (LlamaIndex)
