@@ -1108,7 +1108,9 @@ settings.api_key.perplexity.desc = Wymagane do Perplexity API.
 settings.api_key.xai = Klucz API xAI
 settings.api_key.xai.desc = Wymagane do xAI API i modeli Grok.
 settings.api_proxy = Adres proxy
+settings.api_proxy.enabled = Użyj proxy
 settings.api_proxy.desc = Opcjonalnie, proxy dla API SDK, np. http://proxy.example.com lub socks5://user:pass@host:port
+settings.api_proxy.enabled.desc = Włącz tę opcję, aby używać proxy do połączeń z API
 settings.api_use_responses = Używaj Responses API w trybie czatu
 settings.api_use_responses.desc = Używaj Responses API zamiast ChatCompletions API w trybie czatu
 settings.api_use_responses_llama = Używaj Responses API w trybie Chat z Plikami (LlamaIndex)
