@@ -1106,8 +1106,10 @@ settings.api_key.perplexity = КЛЮЧ API Perplexity
 settings.api_key.perplexity.desc = Обов'язковий для Perplexity API.
 settings.api_key.xai = КЛЮЧ API xAI
 settings.api_key.xai.desc = Обов'язковий для xAI API та моделей Grok.
-settings.api_proxy = Проксі-адреса
+settings.api_proxy = Використовувати проксі
+settings.api_proxy.enabled = Проксі-адреса
 settings.api_proxy.desc = Опціонально, проксі для API SDK, наприклад, http://proxy.example.com або socks5://user:pass@host:port
+settings.api_proxy.enabled.desc = Увімкніть цю опцію, щоб використовувати проксі для підключень до API
 settings.api_use_responses = Використовувати API відповідей у режимі чату
 settings.api_use_responses.desc = Використовувати API відповідей замість API ChatCompletions у режимі чату
 settings.api_use_responses_llama = Використовувати Responses API в режимі Чат з Файлами (LlamaIndex)
