@@ -1107,7 +1107,9 @@ settings.api_key.perplexity.desc = Perplexity API 所需。
 settings.api_key.xai = xAI API 密钥
 settings.api_key.xai.desc = xAI API 和 Grok 模型所需。
 settings.api_proxy = 代理地址
+settings.api_proxy.enabled = 使用代理
 settings.api_proxy.desc = 可选，用于 API SDK 的代理，例如 http://proxy.example.com 或 socks5://user:pass@host:port
+settings.api_proxy.enabled.desc = 启用此选项以使用代理进行 API 连接
 settings.api_use_responses = 在聊天模式中使用 Responses API
 settings.api_use_responses.desc = 在聊天模式中使用 Responses API 而不是 ChatCompletions API
 settings.api_use_responses_llama = 在Chat with Files模式（LlamaIndex）下使用Responses API
