@@ -1,35 +1,35 @@
 [LOCALE]
-plugin.description = Search, geocode, plan routes, and generate static maps using OpenStreetMap services (Nominatim, OSRM, staticmap). Images are saved under data/openstreetmap/.
-plugin.name = OpenStreetMap
-http_timeout.description = Requests timeout in seconds.
-http_timeout.label = HTTP timeout (s)
-user_agent.description = Custom User-Agent for outgoing requests.
-user_agent.label = User-Agent
-contact_email.description = Contact email sent to Nominatim as recommended by its usage policy.
-contact_email.label = Contact email (Nominatim)
 accept_language.description = Preferred language for results, e.g. 'pl,en-US;q=0.8'.
 accept_language.label = Accept-Language
+contact_email.description = Contact email sent to Nominatim as recommended by its usage policy.
+contact_email.label = Contact email (Nominatim)
+http_timeout.description = Requests timeout in seconds.
+http_timeout.label = HTTP timeout (s)
+map_height.description = Default static map height in pixels.
+map_height.label = Default height
+map_type.description = Default static map layer type.
+map_type.label = Default map type
+map_width.description = Default static map width in pixels.
+map_width.label = Default width
+map_zoom.description = Default zoom level for center-based maps.
+map_zoom.label = Default zoom
 nominatim_base.description = Base URL for Nominatim (geocoding).
 nominatim_base.label = Nominatim base
 osrm_base.description = Base URL for OSRM routing service.
 osrm_base.label = OSRM base
+param.layers.description = Optional 'layers=' for openstreetmap.org URLs
+param.layers.label = Layers
+plugin.description = Search, geocode, plan routes, and generate static maps using OpenStreetMap services (Nominatim, OSRM, staticmap). Images are saved under data/openstreetmap/.
+plugin.name = OpenStreetMap
+route.debug_url.label = Include OSRM request URL
+route.include_geometry.label = Include geometry (polyline6)
+route.include_steps.label = Include steps (full mode only)
+route.max_polyline_chars.label = Max polyline characters
+route.mode.description = url | summary | full (default summary)
+route.save_map.label = Build preview URL (openstreetmap.org)
 staticmap_base.description = Base URL for static map service.
 staticmap_base.label = Static map base
 tile_base.description = Base URL for XYZ tiles (z/x/y.png).
 tile_base.label = Tile base
-map_type.description = Default static map layer type.
-map_type.label = Default map type
-map_zoom.description = Default zoom level for center-based maps.
-map_zoom.label = Default zoom
-map_width.description = Default static map width in pixels.
-map_width.label = Default width
-map_height.description = Default static map height in pixels.
-map_height.label = Default height
-route.mode.description = url | summary | full (default summary)
-route.include_geometry.label = Include geometry (polyline6)
-route.include_steps.label = Include steps (full mode only)
-route.max_polyline_chars.label = Max polyline characters
-route.debug_url.label = Include OSRM request URL
-route.save_map.label = Build preview URL (openstreetmap.org)
-param.layers.label = Layers
-param.layers.description = Optional 'layers=' for openstreetmap.org URLs
+user_agent.description = Custom User-Agent for outgoing requests.
+user_agent.label = User-Agent
