@@ -1,18 +1,12 @@
 [LOCALE]
-plugin.description = Compute and solve with Wolfram Alpha: short answers, full JSON pods, math (solve, derivatives, integrals), unit conversions, matrix operations, and plots. Images are saved under data/wolframalpha/.
-plugin.name = Wolfram Alpha
 api_base.description = Base API URL (default https://api.wolframalpha.com).
 api_base.label = API base
 api_base.tooltip = Change only if using a proxy or enterprise gateway.
 http_timeout.description = Requests timeout in seconds.
 http_timeout.label = HTTP timeout (s)
 http_timeout.tooltip = Increase if you experience timeouts on large queries.
-wa_appid.description = Your Wolfram Alpha AppID.
-wa_appid.label = Wolfram Alpha AppID
-wa_appid.tooltip = Create one at developer.wolframalpha.com. Required.
-units.description = Preferred unit system for supported endpoints.
-units.label = Units
-units.tooltip = Use 'metric' or 'nonmetric'.
+plugin.description = Compute and solve with Wolfram Alpha: short answers, full JSON pods, math (solve, derivatives, integrals), unit conversions, matrix operations, and plots. Images are saved under data/wolframalpha/.
+plugin.name = Wolfram Alpha
 simple_background.description = Background for Simple API images.
 simple_background.label = Simple background
 simple_background.tooltip = 'white' or 'transparent'.
@@ -22,3 +16,9 @@ simple_layout.tooltip = e.g., 'labelbar', 'inputonly'.
 simple_width.description = Target width for Simple API images.
 simple_width.label = Simple width
 simple_width.tooltip = In pixels. Leave empty to use service default.
+units.description = Preferred unit system for supported endpoints.
+units.label = Units
+units.tooltip = Use 'metric' or 'nonmetric'.
+wa_appid.description = Your Wolfram Alpha AppID.
+wa_appid.label = Wolfram Alpha AppID
+wa_appid.tooltip = Create one at developer.wolframalpha.com. Required.
