@@ -132,6 +132,8 @@ class HuggingFaceRouterLLM(BaseLLM):
 
         # proxy + trust_env (async)
         proxy = window.core.config.get("api_proxy") or window.core.config.get("api_native_hf.proxy")
+        if not window.core.config.get("api_proxy.enabled", False):
+            proxy = ""
         trust_env = window.core.config.get("api_native_hf.trust_env", False)
 
         return HFEmbed(proxy=proxy, trust_env=trust_env, **args)
